fixing alignments

--- a/app/assets/stylesheets/full.css.scss
+++ b/app/assets/stylesheets/full.css.scss
@@ -38,7 +38,7 @@ h1, h2, h3 {
 h1 {
 	color: $primary;
 	font-size: 80px;
-	line-height: 70px;
+	line-height: 55px;
 }
 
 h2 { color: $secondary; }
@@ -110,7 +110,7 @@ div#floating-menu {
 	}
 
 .register-link{
-	margin-bottom:35px;
+	min-height:48px;
 	
 	a.big {	 	
 		font-weight: 700;
@@ -127,13 +127,15 @@ div#floating-menu {
 	a:link,
 	a:visited { color: $primary; }
 	a:hover { color: $secondary; }
-	
+	form{
+		margin-bottom:26px;
+	}
 	
 }
 .hr{
 	border-bottom:1px solid #343434;
-	margin-bottom:35px;
-	width:300px;
+	margin-bottom:18px;
+	width:250px;
 	height:1px;
 }
 menu{
@@ -167,8 +169,8 @@ menu{
 	}
 	a.vimeo_link{
 		margin-left: 8px;
-		background-position: -89px -20px;
-		&:hover{ background-position: -89px 0px; }
+		background-position: -87px -20px;
+		&:hover{ background-position: -87px 0px; }
 	}
 }
 
@@ -252,13 +254,14 @@ input.send {
 	padding: 0px;
 	letter-spacing: 1.5px;
 	text-tansform:uppercase;
+	text-align:right;
 	font:700 14px $family;
 	&:hover{
 		color:$secondary;
 	}
 }
 input.email{
-	width:198px;
+	width:180px;
 	background-color: #FFF;
 	border-radius: 4px;
 	border: 1px solid #38393D;
